 * Fixed rendering of blister bar on deposit page
 * Link in "request a copy" email now goes to item control page.
 * RequestCopy screen now uses new icon link method
 * Added chown-for-eprints to convert plugins
 * Fixed bug that imagemagick convert plugins didn't handle uppercase
    suffixes.
 * Split thumbnail convert id into thumbnail_small etc.
 * Fixed EPC error in phrase in requestdoc
 * Browse by year now subdivides page into months
 * Added a little bit of vertical alignment on +/- icons in subject input.

2006-11-23 cjg
 * Added some padding above and below the blister in editlink to stop it 
    looking odd.
 * Added update button to upload component
 * Added styles to view pages.
 * Changed "number of items" text for subject views to make it clearer.
 * Added forgotten "blister arrow"
 * Broke up eprints.js
 * Renamed all js files to be prefixed with a number to make them look 
    less confusing.

2006-11-23 cjg
 * Got rid of toggling menu at top of screen - moved actions into Admin

2006-11-24 cjg
 * Fixed plugin loader to only load files _ending_ in .pm
 * Changed ABSTRACT to DISABLE as the varname to disable a plugin.

2006-11-24 cjg
 * Added local .js and .css files to show people where to add stuff.

2006-11-24 cjg
 * Fixed bug in plugin loader.

2006-11-24 cjg
 * Fixed back button/re-post problem
 * Changed login system to set a cookie BEFORE you log in
 * stuff now creates a url of the static view for the resource after
    a post redirects.
 * Messages in a POST request now save to a db table to be shown the
    next time the current user gets a screen rendered.
 * Fixed bug in blister bar - did not highlight deposit stage.

2006-11-26 cjg
 * Fixed issues with internal buttons and values being passed int the new
    POST/GET system.
 * Fixed bug that surrounds lost the [?] help button.
 * Disposed of an XML which is tested but not used.
 * Removed get_internal_value_id - no longer used
 * removed get_internal_value from metafield
 